--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="bg--dark-gray align--center pt3 pb3">
             <div class="container pt2 pb2">
                 <img class="cta-image mb2 reveal-on-scroll is-revealing" src="img/text.svg" alt="Text the app">
-               <form>
+               <form netlify>
                 <p class="h3 text--white mb1 bold">We'll mail you the&nbsp;app</p>
                 <p class="text--white mb3">Just insert your email below.</p>
                 <div class="inline-block mr1 no-mr-on-mobile" style="width:280px;max-width:100%">
