More updates to the landing page

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <div class="container pt2 pb2">
                 <img class="cta-image mb2 reveal-on-scroll is-revealing" src="img/text.svg" alt="Text the app">
                <form netlify>
-                <p class="h3 text--white mb1 bold">We'll mail you the&nbsp;app</p>
-                <p class="text--white mb3">Just insert your email below.</p>
+                <p class="h3 text--white mb1 bold">Curious as to how Managedby would fit your space?</p>
+                <p class="text--white mb3">Just insert your email below and we'd schedule a call.</p>
                 <div class="inline-block mr1 no-mr-on-mobile" style="width:280px;max-width:100%">
                     <input class="form-control" type="email" placeholder="Email">
                 </div>
