Some more update to the landing page

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
                         <h2>Example use cases</h2>
-                        <p>Cut out the noise and physical shoulder taps&nbsp;. ManagedBy allows space managers 
-                            (includes office managers, hotel managers, apartment caretakers/managers etc), 
-                            receive internal helpdesk requests (such as item replacements, fixing, everything that make spaces tick)</p>
+                        <p>Cut out the noise and physical shoulder taps&nbsp;. Managedby allows space managers to add people," 
+                             recieve internal helpdesk requests, 
+                         manage tasks, have records for compliance while keeping everyone in the loop on progress.</p>
                     </div>
                 </div>
                 <div class="grid-column span-1"></div>
@@ -96,7 +96,7 @@
                     <div class="border--bottom pb2 mb2">
                         <h2>Keep people in the loop</h2>
                         <p>
-                            When you are started on a helpdesk request you can change the status to doing to
+                            When you (a space manager) are started on a helpdesk request you can change the status to doing to
                             keep the requester in the loop on what you are doing.
                         </p>
                     </div>
