--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
                         <h2>Example use cases</h2>
-                        <p>Cut out the noise and physical shoulder taps&nbsp;. Managedby allows space managers to add people," 
+                        <p>Cut out the noise and physical shoulder taps&nbsp;. Managedby allows space managers to add people, 
                              recieve internal helpdesk requests (like repairs, replacements etc), 
                          manage tasks, have records for compliance while keeping everyone in the loop on progress.</p>
                     </div>
