tiny grammar fix

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="border--bottom pb2 mb2">
                         <h2>Keep people in the loop</h2>
                         <p>
-                            When you (a space manager) are started on a helpdesk request you can change the status to doing to
+                            When you (a space manager) is started on a helpdesk request you can change the status to doing to
                             keep the requester in the loop on what you are doing.
                         </p>
                     </div>
