--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h2>Example use cases</h2>
                         <p>Cut out the noise and physical shoulder taps&nbsp;. Managedby allows space managers to add people, 
                              recieve internal helpdesk requests (like repairs, replacements etc), 
-                         manage tasks, have records for compliance while keeping everyone in the loop on progress.</p>
+                         manage tasks (show tasks as assigned, or done), have records for compliance while keeping everyone in the loop on progress.</p>
                     </div>
                 </div>
                 <div class="grid-column span-1"></div>
