--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/messaging.svg" alt="Fast messaging">
-                    <p>Mark as doing/done as the activties progress</p>
+                    <p>Mark as doing/done as the activities progress</p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/mail.svg" alt="Share with others">
@@ -96,7 +96,7 @@
                     <div class="border--bottom pb2 mb2">
                         <h2>Keep people in the loop</h2>
                         <p>
-                            When you (a space manager) is started on a helpdesk request you can change the status to doing to
+                            When you (a space manager) is started on a helpdesk request you can change the status to assigned to
                             keep the requester in the loop on what you are doing.
                         </p>
                     </div>
