--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
                         <h2>Example use cases</h2>
-                        <p>Cut out the noise and physical shoulder taps&nbsp;. Managedby allows space managers to add people, 
-                             recieve internal helpdesk requests (like repairs, replacements etc), 
+                        <p>Cut out the noise and physical shoulder taps&nbsp;. Managedby allows space managers for example an apartment building managed by a company.
+                             mostly for repairs, building managers can handle all the requests that come in, 
                          manage tasks (show tasks as assigned, or done), have records for compliance while keeping everyone in the loop on progress.</p>
                     </div>
                 </div>
@@ -96,8 +96,9 @@
                     <div class="border--bottom pb2 mb2">
                         <h2>Keep people in the loop</h2>
                         <p>
-                            When you (a space manager) is started on a helpdesk request you can change the status to assigned to
-                            keep the requester in the loop on what you are doing.
+                            For offices with admin officers and office managers. Managedby provides a place 
+                            for you to handle all requests like, 
+                            replacement for a broken chair or printer ink etc, without having to be directly disturbed for it
                         </p>
                     </div>
                 </div>
