--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
                 <div class="grid-column mt3 mb2 order-2">
                     <div class="border--bottom pb2 mb2">
                         <h2>Example use cases</h2>
-                        <p>Cut out the noise and physical shoulder taps&nbsp;. Managedby allows space managers for example an apartment building managed by a company.
-                             mostly for repairs, building managers can handle all the requests that come in, 
-                         manage tasks (show tasks as assigned, or done), have records for compliance while keeping everyone in the loop on progress.</p>
+                        <p>Cut out the noise and physical shoulder taps&nbsp;.
+                             Managedby allows building managers, 
+                              receive helpdesk requests within their buildings, they can view all the requests (like electricity issues, plumbing issues etc.) 
+                              that come in from tenants on their dashboard as tasks, 
+                         manage tasks (show tasks as assigned, or done), have records for compliance purpose (replacements, repairs etc.) 
+                         while keeping everyone in the loop on progress.</p>
                     </div>
                 </div>
                 <div class="grid-column span-1"></div>
