Update to the landing page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Feature list -->
         <div class="container pt3 mt2 text--gray align--center">
-            <p class="mb3">Great for space managers with up to 100&nbsp; people.</p>
+            <p class="mb3">Great for space, office and facilities managers with up to 100&nbsp; people.</p>
             <div class="grid-row">
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/assign.svg" alt="Assign to others">
@@ -52,15 +52,15 @@
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/search.svg" alt="Powerful search">
-                    <p>They'll receive a notification and can place helpdesk requests</p>
+                    <p>They'll receive a notification in their email & can place helpdesk requests such as repairs, replacement etc.</p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/vault.svg" alt="Put in a vault">
-                    <p>You recieve helpdesk requests</p>
+                    <p>You recieve these helpdesk requests and assign or otsource to vendors.</p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/messaging.svg" alt="Fast messaging">
-                    <p>Mark as doing/done as the activities progress</p>
+                    <p>Mark as doing/done as the activities progress, and can get individuals to outsource the requests to.</p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/mail.svg" alt="Share with others">
