--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="logo mb3 reveal-on-scroll is-revealing" src="img/logo.png" alt="Carta">
             <h1 class="mb2">A new take on space&nbsp;management.</h1>
             <center>
-                <a target="_blank" href="https://managedby.netlify.com" class="btn btn--secondary">Get started</a>
+                <a target="_blank" href="https://app.managedbyyou.online" class="btn btn--secondary">Get started</a>
             </center>
         </div>
     </header>
