Fixed issues on landing page

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/search.svg" alt="Powerful search">
-                    <p>They'll receive a notification in their email & can place helpdesk requests such as repairs, replacement etc.</p>
+                    <p>They'll receive a notification in their email for login details & can place helpdesk requests such as repairs, replacement etc.</p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/vault.svg" alt="Put in a vault">
-                    <p>You recieve these helpdesk requests and assign or otsource to vendors.</p>
+                    <p>You recieve these helpdesk requests and assign or outsource to vendors.</p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/messaging.svg" alt="Fast messaging">
