updated the header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Header -->
     <header class="align--center pt3">
         <div class="container--lg border--bottom pb3">
-            <img class="logo mb3 reveal-on-scroll is-revealing" src="img/logo.png" alt="Carta">
+            <img class="logo mb3 reveal-on-scroll is-revealing" src="img/logo.png" alt="Managedby">
             <h1 class="mb2">A new take on space&nbsp;management.</h1>
             <center>
                 <a target="_blank" href="https://www.app.managedbyyou.online" class="btn btn--secondary">Get started</a>
@@ -40,11 +40,12 @@
 
         <!-- Feature list -->
         <div class="container pt3 mt2 text--gray align--center">
+                <h3>How it works</h3>
             <p class="mb3">Great for space, office and facilities managers with up to 100&nbsp; people.</p>
             <div class="grid-row">
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/assign.svg" alt="Assign to others">
-                    <p>Create an account</p>
+                    <p>Create an account, it only takes a minute.</p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/connected.svg" alt="Stay connected">
