--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
 
         <!-- Feature list -->
         <div class="container pt3 mt2 text--gray align--center">
-                <h3>How it works</h3>
+            <h3>How it works</h3>
             <p class="mb3">Great for space, office and facilities managers with up to 100&nbsp; people.</p>
             <div class="grid-row">
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/assign.svg" alt="Assign to others">
-                    <p>Create an account, it only takes a minute.</p>
+                    <p><b>Create an account, it only takes a minute.</b></p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/connected.svg" alt="Stay connected">
-                    <p>Add colleagues, space occupants etc. </p>
+                    <p><b>Add colleagues, space occupants etc.</b> </p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/search.svg" alt="Powerful search">
-                    <p>They'll receive a notification in their email for login details & can place helpdesk requests such as repairs, replacement etc.</p>
+                    <p><b>They receive an email with login details & can place helpdesk requests (repairs, replacement etc).</b></p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/vault.svg" alt="Put in a vault">
-                    <p>You recieve these helpdesk requests and assign or outsource to vendors.</p>
+                    <p><b>You recieve these helpdesk requests and assign or outsource to vendors.</b></p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/messaging.svg" alt="Fast messaging">
-                    <p>Mark as doing/done as the activities progress, and can get individuals to outsource the requests to.</p>
+                    <p><b>Mark requests as assigned or done.</b></p>
                 </div>
                 <div class="grid-column span-one-third mb3 reveal-on-scroll is-revealing">
                     <img class="illustration--small mb1" src="img/mail.svg" alt="Share with others">
-                    <p>Keep everyone in the loop</p>
+                    <p><b>Keep everyone in the loop</b></p>
                 </div>
             </div>
         </div>
